Flesh out github.io website

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dummy</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title> ember-cli-tetris </title>
+
+    <meta name="keywords" content="ember cli tetris djsegal">
+    <meta name="author" content="ahab io">
+    <meta name="description" content="ember-cli-tetris: more blocks, more problems">
 
     {{content-for "head"}}
 
@@ -13,13 +20,18 @@
     <link rel="stylesheet" href="assets/dummy.css">
 
     {{content-for "head-footer"}}
+
   </head>
+
   <body>
+
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
     <script src="assets/dummy.js"></script>
 
     {{content-for "body-footer"}}
+
   </body>
+
 </html>
